--- a/phonebill-android/app/src/main/res/layout/activity_main.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.57" />
+        app:layout_constraintVertical_bias="0.417" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="667dp"
-        android:layout_marginEnd="300dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginEnd="160dp"
+        android:onClick="LaunchREADME"
         android:text="@string/help"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
