Work on Create Phone Bill

--- a/phonebill-android/app/src/main/res/layout/activity_main.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="LaunchREADME"
+    android:onClick="Launch_Menu"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.417" />
+        app:layout_constraintVertical_bias="0.383" />
 
     <Button
         android:id="@+id/button"
@@ -25,6 +25,17 @@
         android:layout_marginEnd="160dp"
         android:onClick="LaunchREADME"
         android:text="@string/help"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="286dp"
+        android:layout_marginEnd="160dp"
+        android:onClick="Launch_Menu"
+        android:text="@string/menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
