--- a/phonebill-android/app/src/main/res/layout/activity_launch_menu.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_launch_menu.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="LaunchCreatePhoneBill"
     tools:context=".LaunchMenu">
 
     <Button
@@ -23,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="232dp"
+        android:onClick="LaunchAddNewCall"
         android:text="@string/add_new_phone_call"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,10 +41,11 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="392dp"
         android:onClick="LaunchCreatePhoneBill"
         android:text="@string/create_new_phone_bill"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
