Added features to Add Call

--- a/phonebill-android/app/src/main/res/layout/activity_add_call.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_add_call.xml
@@ -6,4 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".Add_call">
 
+    <EditText
+        android:id="@+id/AddCaller"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:ems="10"
+        android:hint="@string/enter_caller_number"
+        android:inputType="phone"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/AddCallee"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.512"
+        tools:ignore="Autofill,TextContrastCheck" />
+
+    <EditText
+        android:id="@+id/AddCallee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="500dp"
+        android:ems="10"
+        android:hint="@string/enter_callee_number"
+        android:inputType="phone"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="Autofill,TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
