--- a/phonebill-android/app/src/main/res/layout/activity_launch_add_new_call.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_launch_add_new_call.xml
@@ -38,6 +38,7 @@
         android:id="@+id/button10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="LaunchNewCall"
         android:text="@string/add_new_call"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
