Completing Add Call

--- a/phonebill-android/app/src/main/res/layout/activity_add_call.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_add_call.xml
@@ -7,111 +7,131 @@
     tools:context=".Add_call">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="371dp"
-        android:layout_height="510dp"
+        android:layout_width="392dp"
+        android:layout_height="680dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="129dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.405">
 
         <EditText
             android:id="@+id/AddCaller"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginTop="104dp"
+            android:layout_marginBottom="528dp"
             android:ems="10"
             android:hint="@string/enter_caller_number"
             android:inputType="phone"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/AddCallee"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintHorizontal_bias="0.472"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
             tools:ignore="Autofill,TextContrastCheck" />
 
         <EditText
             android:id="@+id/AddCallee"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="172dp"
             android:layout_marginEnd="80dp"
-            android:layout_marginBottom="348dp"
+            android:layout_marginBottom="460dp"
             android:ems="10"
             android:hint="@string/enter_callee_number"
             android:inputType="phone"
             android:minHeight="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.843"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="Autofill,TextContrastCheck" />
 
         <EditText
             android:id="@+id/begin_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="244dp"
+            android:layout_marginBottom="388dp"
             android:ems="10"
             android:hint="@string/enter_begin_date"
             android:inputType="date"
             android:minHeight="48dp"
-            tools:ignore="Autofill,TextContrastCheck"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTime"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintHorizontal_bias="0.472"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/AddCallee"
-            app:layout_constraintVertical_bias="0.246" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="Autofill,TextContrastCheck" />
 
         <EditText
-            android:id="@+id/editTextTime"
+            android:id="@+id/begin_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="316dp"
+            android:layout_marginBottom="316dp"
             android:ems="10"
             android:hint="@string/enter_begin_time"
             android:inputType="time"
             android:minHeight="48dp"
-            tools:ignore="Autofill,TextContrastCheck"
-            app:layout_constraintBottom_toTopOf="@+id/editTextDate2"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="Autofill,TextContrastCheck" />
 
         <EditText
-            android:id="@+id/editTextDate2"
+            android:id="@+id/end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="81dp"
+            android:layout_marginBottom="244dp"
             android:ems="10"
             android:hint="@string/enter_end_date"
             android:inputType="date"
             android:minHeight="48dp"
-            tools:ignore="Autofill,TextContrastCheck"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTime2"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.285"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="Autofill,TextContrastCheck" />
 
         <EditText
-            android:id="@+id/editTextTime2"
+            android:id="@+id/end_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="28dp"
+            android:layout_marginTop="452dp"
+            android:layout_marginBottom="180dp"
             android:ems="10"
             android:hint="@string/enter_end_time"
             android:inputType="time"
             android:minHeight="48dp"
-            tools:ignore="Autofill,TextContrastCheck"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="Autofill,TextContrastCheck" />
+
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="112dp"
+            android:onClick="CreateCall"
+            android:text="@string/createcall"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
