--- a/phonebill-android/app/src/main/res/layout/activity_add_call.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_add_call.xml
@@ -133,5 +133,16 @@
             android:text="@string/createcall"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/button12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="56dp"
+            android:layout_marginBottom="112dp"
+            android:onClick="ReturnToMenu"
+            android:text="return"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
