--- a/phonebill-android/app/src/main/res/layout/activity_launch_menu.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_launch_menu.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="156dp"
+        android:onClick="LaunchPrettyPrint"
         android:text="@string/pretty_print"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,10 +42,11 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="376dp"
         android:onClick="LaunchCreatePhoneBill"
         android:text="@string/create_new_phone_bill"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.596"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
