--- a/phonebill-android/app/src/main/res/layout/activity_pretty_print.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_pretty_print.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".pretty_print">
 
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="224dp"
+        android:layout_height="81dp"
+        android:ems="10"
+        android:hint="Search Customer by Name"
+        android:inputType="textPersonName"
+
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/button13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.443"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.784" />
+
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="360dp"
+        android:text="search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
