--- a/phonebill-android/app/src/main/res/layout/activity_pretty_print.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_pretty_print.xml
@@ -8,10 +8,10 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="224dp"
-        android:layout_height="81dp"
+        android:layout_width="232dp"
+        android:layout_height="53dp"
         android:ems="10"
-        android:hint="Search Customer by Name"
+        android:hint="@string/search_customer_by_name"
         android:inputType="textPersonName"
 
         android:minHeight="48dp"
@@ -20,15 +20,30 @@
         app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.784" />
+        app:layout_constraintVertical_bias="0.785"
+        tools:ignore="TextContrastCheck,Autofill" />
+
 
     <Button
         android:id="@+id/button13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="360dp"
+        android:onClick="SearchPhoneCallPrettyPrint"
         android:text="search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:onClick="PrettyPrint"
+        android:text="Display"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button13" />
 </androidx.constraintlayout.widget.ConstraintLayout>
