--- a/phonebill-android/app/src/main/res/layout/activity_launch_menu.xml
+++ b/phonebill-android/app/src/main/res/layout/activity_launch_menu.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="312dp"
+        android:onClick="LaunchSearch"
         android:text="@string/search_phone_calls"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
